# nr-cms

./: .gitignore  Cargo.toml  README.md
.github/workflows/: coverage.yml  rust.yml
sample/: index.cms
sample/blog_files/: learning_code.cms  my_first_toy.cms
src/: args.rs  cms_types.rs  gen.rs  img_handling.rs  main.rs  parsing.rs  run_args.rs  watcher.rs
src/assets/: mod.rs  scripts.rs  styles.rs  svg_images.rs
src/generation/: generate_code.rs  generate_website.rs  mod.rs  page_generator.rs  template_generators.rs
src/parsing/: get_tags.rs  mod.rs  parse_blog.rs  parse_template_elements.rs
src/types/: cms_blog.rs  cms_page.rs  cms_site.rs  generation_dirs.rs  link_type.rs  mod.rs  program_args.rs  template_type.rs
