[package]
name = "nr_cms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "6.1.1"
image = "0.24.7"
base64 = "0.21.5"
log = "0.4.20"
env_logger = "0.10.1"
clap = { version = "4.4.12", features = ["derive"] }
chrono = "0.4.31"
