[package]
name = "nr_cms"
description = "A simple CMS for creating small, lightweight personal websites"
authors = ["Nareshkumar Rao"]
version = "1.0.0"
edition = "2021"

[dependencies]
notify = "6.1.1"
image = "0.24.7"
base64 = "0.21.5"
log = "0.4.20"
env_logger = "0.10.1"
clap = { version = "4.4.12", features = ["derive"] }
chrono = "0.4.31"
